# VECM

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml  daily-run.yml  python-package-conda.yml
docs/: TRADING_GUIDE.md  api.md  quickstart.ipynb
reports/: playbook_run_20251123_153510.md  playbook_run_20260210_155024_01.md
tests/: test_ms_spread.py  test_parallel_run.py  test_playbook_integration.py  test_run_demo.py  test_storage.py
tests/fixtures/: price_sample.csv  synthetic_data.py
tests/integration/: test_e2e_pipeline.py
tests/smoke/: test_run_demo_smoke.py
tests/unit/: test_cache_equivalence.py  test_cache_keys_property.py  test_cost_liquidity.py  test_dashboard_execution_markers.py  test_dashboard_whatif_defaults.py  test_data_streaming_history_to_tidy.py  test_execute_trades_dynamic_hold.py  test_execute_trades_pnl_accumulation.py  test_extreme_sharpe_scan.py  test_playbook_persist_db_writes.py  test_short_term_cache_attrs.py  test_signal_mode_contrarian.py  test_stage2_bo_objective_modes.py
vecm_project/: easy_run.py  requirements.txt  run_demo.py
vecm_project/config/: __init__.py  daily_pairs.json  settings.py  strategy_profiles.json  ticker_groups.json
vecm_project/dashboard/: app.py
vecm_project/data/: adj_close_data.csv  adj_close_data.meta.json  offline_prices.csv  sample_adj_close.csv  subset_pairs.txt
vecm_project/out_ms/: run_manifest.csv  (+5 more)
(+29 files in other folders)
