[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecm-project"
version = "0.1.0"
description = "VECM-based pairs trading system"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "statsmodels",
    "duckdb",
    "pytest",
    "pytest-cov",
    "Flask",
    "requests",
    "urllib3",
    "optuna",
    "scikit-learn",
    "ray[tune]",
    "matplotlib",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "joblib",
    "SQLAlchemy",
    "yfinance",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "ruff",
]

[project.scripts]
vecm-demo = "vecm_project.run_demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["vecm_project"]
omit = ["*/tests/*", "*/test_*.py"]
